<resources>
    <string name="app_name">BikeShare</string>
    <string name="what_bike">"Bike: "</string>
    <string name="where">"Location: "</string>
    <string name="last_added">"Last added: "</string>
    <string name="add_ride">Add ride</string>
    <string name="start_ride">Start Ride</string>
    <string name="end_ride">End Ride</string>
    <string name="list_rides">List rides</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
