<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:layout_margin="15dp"
              tools:context=".StartRideActivity">

	<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			android:layout_marginBottom="5dp">

		<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/last_added" />

		<TextView
				android:id="@+id/last_thing"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:textStyle="bold" />

	</LinearLayout>

	<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			android:layout_marginBottom="5dp">

		<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/what_bike" />

		<EditText
				android:id="@+id/what_text"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:inputType="text" />

	</LinearLayout>

	<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			android:layout_marginBottom="5dp">

		<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/where" />

		<EditText
				android:id="@+id/where_text"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:inputType="text" />

	</LinearLayout>

	<View
			android:layout_width="match_parent"
			android:layout_height="20dp" />

	<Button
			android:id="@+id/add_button"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/add_ride"
			android:layout_gravity="center"/>

</LinearLayout>